<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dip" >

    <LinearLayout
        android:id="@+id/thumbnail_list"
        android:layout_width="wrap_content"
        android:layout_height="80dip"
        android:layout_alignParentRight="true"
        android:layout_marginRight="5dip"
        android:padding="5dip" >

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="60dip"
            android:layout_height="60dip"
            android:contentDescription="@string/icon"
            android:src="@drawable/icon" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/thumbnail_list"
        android:layout_alignParentLeft="true"
        android:contentDescription="@string/listbg"
        android:padding="10dp"
        android:src="@drawable/listbg" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/imageView1"
        android:layout_toLeftOf="@+id/thumbnail_list"
        android:fontFamily="Tahoma"
        android:layoutDirection="rtl"
        android:text="@string/test"
        android:padding="10dp"
        android:textSize="16sp" />

</RelativeLayout>