<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center|top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/banner"
        android:gravity="center"
        android:padding="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/showimage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/icon"
                android:gravity="center"
                android:padding="20dp"
                android:src="@drawable/loader" />

            <TextView
                android:id="@+id/showid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Tahoma"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/item_id" />

            <TextView
                android:id="@+id/showtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Tahoma"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/item_title" />

            <TextView
                android:id="@+id/showbody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Tahoma"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/item_body" />
            
        </LinearLayout>
    </ScrollView>

</LinearLayout>