<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="center|top"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp" 
        android:background="@drawable/banner"
        android:gravity="center"
        android:padding="20dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="Tahoma"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/about_us_text_1" />

            <ImageView
                android:id="@+id/imageView1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.24"
                android:contentDescription="@string/faragostaresh"
                android:gravity="center"
                android:src="@drawable/header" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:fontFamily="Tahoma"
                android:text="@string/about_us_text_2" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/about_us_text_3" />

            <ImageView
                android:id="@+id/faragostaresh"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2.39"
                android:clickable="true"
                android:contentDescription="@string/faragostaresh"
                android:gravity="center"
                android:src="@drawable/faragostaresh" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>